added resources functionality

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -11,7 +11,7 @@
         <ion-icon item-right name="ios-navigate-outline"></ion-icon>
         My Events
       </ion-item>
-      <ion-item menuClose tappable>
+      <ion-item (click)="openMarket()" tappable>
         <ion-icon item-right name="ios-globe-outline"></ion-icon>
         Market
       </ion-item>
