--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -24,7 +24,7 @@ $background-color:  #fff;
 
 $colors: (
   primary:    #40C276,
-  secondary:  #ddd,
+  secondary:  #165725,
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222
