fixed some bug?

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -3,7 +3,7 @@
     <div class="menu-dashboard">
     </div>
     <ion-list class="menu-list">
-      <ion-item menuClose tappable >
+      <ion-item (click)="openProfile()" menuClose tappable >
         <ion-icon item-right name="ios-contact-outline"></ion-icon>
         Profile
       </ion-item>
