--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -356,12 +356,12 @@ $configs: (
 		animationDelay: 1s
 	),
 	chart-two: (
-		svgSize: 200px,
+		svgSize: 100px,
 		percentage: 50,
-		strokeWidth: 15px,
+		strokeWidth: 3px,
 		backgroundColor: #305556,
-		foregroundColor: #d0f09e,
-		labelColor: #c6e8d7,
+		foregroundColor: #79be9b,
+		labelColor: #999,
 		labelFontSize: 2.5rem,
 		duration: 3s,
 		animationDelay: 1s
