added a 'myEvents'-Page

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -7,7 +7,7 @@
         <ion-icon item-right name="ios-contact-outline"></ion-icon>
         Profile
       </ion-item>
-      <ion-item (click)="openPage('NewEvent')" tappable>
+      <ion-item (click)="openPage('MyEvents')" tappable>
         <ion-icon item-right name="ios-navigate-outline"></ion-icon>
         My Events
       </ion-item>
