--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -196,6 +196,10 @@ sidemenu ion-backdrop {
 	color: #555;
 }
 
+.fullwidth-list.list-ios .item-block .item-inner {
+	border-bottom: 0;
+}
+
 .resource-list .item-md {
 	background-color: #ddd;
 	border-color: #bbb;
