added firebase to the 'my-events'-page

--- a/src/pages/my-events/my-events.scss
+++ b/src/pages/my-events/my-events.scss
@@ -15,4 +15,10 @@ page-my-events {
 	.toolbar-background-ios {
 		border-bottom-width: 0;
 	}
+
+	.center {
+		display: block;
+	    margin: auto;
+	    width: 40%;
+	}
 }
